# pokerus

./: .gitattributes  .gitignore  Cargo.toml  README.md
common/src/: error.rs  lib.rs
data/: Cargo.toml
data/src/: experience.rs  game_sets.rs  gender.rs  generated.rs  items.rs  languages.rs  lib.rs  moves.rs  natures.rs  pokerus.rs  species.rs  stats.rs  status.rs  types.rs
formats/: Cargo.toml
formats/examples/: read_pk1.rs  read_sav1.rs  read_sav6oras.rs
formats/src/: crypto.rs  gen1.rs  gen6.rs  lib.rs  pokemon.rs  saves.rs  utils.rs
formats/src/gen1/: constants.rs  list.rs  pokemon.rs  save.rs  text.rs  utils.rs
formats/src/gen6/: save_oras.rs
formats/src/utils/: data_reader.rs  lazy_data.rs  lazy_string.rs
protean/: Cargo.toml
protean/scripts/: split_home.py
protean/src/: conversions.rs  generators.rs  gsc.rs  lib.rs  rgby.rs  rse_frlg.rs  sources.rs
protean/src/generators/: experience.rs  items.rs  moves.rs  natures.rs  species.rs  types.rs
protean/src/generators/species/: forms.rs
protean/src/sources/: home.rs  pkhex.rs  raw.rs
protean/src/sources/pkhex/: personal_info.rs
protean/src/sources/pkhex/personal_info/: gsc.rs  oras.rs  rgby.rs  rse_frlg.rs
protean/src/sources/raw/: rgby.rs
xtask/: Cargo.toml
xtask/src/: main.rs
