[package]
name = "pokerus_formats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { version = "0.1.0", path = "../common" }
pokerus_data = { version = "0.1.0", path = "../data" }
log = "0.4.20"

[dev-dependencies]
clap = { version = "4.4.7", features = ["derive"] }

[features]
std = []

[[example]]
name = "read_pk1"
